# trilha_python

./: README.md
01_python_basico/atividade_01/: ex_05.py
01_python_basico/atividade_02/: ex_07.ipynb
01_python_basico/atividade_03/: ex_02.py  ex_03.py  ex_04.py
01_python_basico/atividade_04/: ex_02.py  ex_04.py
01_python_basico/atividade_05/: ex_04.py  ex_05.py
02_versionamento_de_codigo/: readme.md
03_python_avancado/aula_10/multiply_args/: pyproject.toml
03_python_avancado/aula_10_args_kwargs/test_args/: pyproject.toml
M6 - python_database/Atividade_02_connection_python_postgres/: README.md  __main__.py  requirements.txt
M6 - python_database/atv_08/: otimization.py  otimization.sql
M6 - python_database/atv_09/: docker-compose.yml  main.py
M6 - python_database/mongo_db/: __main__.py
Módulo 01 - Python Básico/: README.md
Módulo 01 - Python Básico/atividade_01/: ex_01.py  ex_02.py  ex_03.py  ex_04.py  ex_06.py  ex_07.py
Módulo 01 - Python Básico/atividade_02/: ex_01.py  ex_02.py  ex_03.py  ex_04.py  ex_05.py  ex_06.py  ex_07.py
Módulo 01 - Python Básico/atividade_03/: ex_01.py  ex_05.py
Módulo 01 - Python Básico/atividade_04/: ex_01.py  ex_03.py  ex_05.py  ex_06.py
Módulo 01 - Python Básico/atividade_05/: ex_01.py  ex_02.py  ex_03.py  ex_04.py
Módulo 02 - Versionamento de Cdigo/: main.py
Módulo 03 - Python Avançado/: README.md
Módulo 03 - Python Avançado/aula_00_working_with_files/: ex_01.py  ex_01.txt  ex_02.py  ex_03.py  ex_04.py  ex_05.py  ex_05.txt  ex_06_dictionary.json  ex_06_dictionary.txt  ex_06_json_loads.py  ex_07_ast.literal.py  ex_08_dictionary.txt  ex_08_pickle.py  methods.txt
Módulo 03 - Python Avançado/aula_02_ambientes_virtuais/atividade_03/projeto_A/: pyproject.toml
Módulo 03 - Python Avançado/aula_02_ambientes_virtuais/atividade_03/projeto_B/: pyproject.toml
Módulo 03 - Python Avançado/aula_03_modules_and_packages/: README.md
Módulo 03 - Python Avançado/aula_10_args_kwargs/print_args/: README.md  pyproject.toml
Módulo 03 - Python Avançado/aula_12_classes/airplane_trip/: README.md  main.py  pyproject.toml
Módulo 03 - Python Avançado/just_ignore_me/: comandos.txt
Módulo 04 - Visão Computacional/: .gitignore  README.md
Módulo 04 - Visão Computacional/aula_01_e_02_processamento_de_imagens/: README.md
Módulo 04 - Visão Computacional/aula_01_e_02_processamento_de_imagens/processamento/: PI03 ListEx do PI01 e PI02_guia de estudo.ipynb  pyproject.toml
Módulo 04 - Visão Computacional/aula_01_e_02_processamento_de_imagens/processamento/ex_01/: __init__.py  processamento.py
Módulo 04 - Visão Computacional/aula_01_e_02_processamento_de_imagens/processamento/ex_02/: process.py
Módulo 04 - Visão Computacional/aula_01_e_02_processamento_de_imagens/processamento/ex_03/: process.py
Módulo 04 - Visão Computacional/aula_01_e_02_processamento_de_imagens/processamento/ex_04/: process.py
Módulo 04 - Visão Computacional/aula_03_realce_de_imagens/: README.md
Módulo 04 - Visão Computacional/aula_03_realce_de_imagens/realce/: README.md  pyproject.toml
Módulo 04 - Visão Computacional/aula_03_realce_de_imagens/realce/realce/: __init__.py  criar_ruido.py  enhance.py  pyqt.py
Módulo 04 - Visão Computacional/aula_04_segmentacao_de_imagens/: README.md  limiarizacao_ex1.py  limiarizacao_ex2.py  limiarizacao_ex3.py  limiarizacao_ex4.py  limiarizacao_ex5.py  watershed.py
Módulo 06 - Python Database/: README.md
Módulo 06 - Python Database/atv_09/: .env  (+3 more)
Módulo 06 - Python Database/students_module/pypostgres/: README.md  pyproject.toml
Módulo 06 - Python Database/students_module/pypostgres/repository/: db_queries.py
Módulo 06 - Python Database/students_module/pypostgres/service/: db_service.py
Módulo 07 - Estruturas de Dados/: README.md
Módulo 08 - Engenharia de Dados/: README.md
Módulo 09 - Fast API/: README.md
comandos/: comandos.txt
(+310 files in other folders)
