[tool.poetry]
name = "processamento"
version = "0.1.0"
description = ""
authors = ["Marlisson Silva <marlisson.business@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
opencv-python = "^4.7.0.72"
matplotlib = "^3.7.1"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
