[tool.poetry]
name = "projeto-a"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "projeto_a"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "1.23.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
