[tool.poetry]
name = "projeto-b"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "projeto_b"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "1.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
